# face_recognizer

./: CMakeLists.txt  README.md  main.cpp
